Updated project structure Implemented user endpoint-group
